--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50%;
-    margin: auto;
     color: white;
     font-family: cursive;
-    background-color: black;
+    background-color: rgb(86, 24, 137);
     border: none;
     border-bottom: 4px solid red;
     border-left: 4px solid red;
@@ -14,5 +12,5 @@
 }
 
 body{
-    background-color: rgba(214, 204, 244, 0.877);
+    background-color: black;
 }
